methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:12: error: '(' expected but identifier found.
    while y!=7{
          ^MethodsArgs:16: error: illegal start of simple expression
  }
  ^