methods.args.MethodsArgs.scala.code
def move(nbPAs:Int, versLAvant :Boolean){
  if (versLAvant==true){
    var y=getY()
    while (y!=7){
      forward()
      y=y+1
    }
  }
  else {
    var y=getY()
    while y!=7{
      backward()
      y=y+1
    }
  }
}